# flow.yaml

appId: com.felix.htwg.mobile.anwendungen.mobile_anwendungen
---

- runFlow:
      file: onboarding_flow.yaml
- assertVisible: "Habits"
- tapOn:
      point: 95%,95%
- assertVisible: "Statistics"
- tapOn:
      point: 0%,95%
- assertVisible: "Habits"